<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movie_white"
        android:title="Movies" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_tvshow_white"
        android:title="TV Show" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favorite_white"
        android:title="Favourite" />


</menu>